solved the slogan form errors which was not showing before

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -49,11 +49,11 @@
         justify-content: center;
         align-items: center;
         width: 97%;
-        height: 70vh;
+        height: 100vh;
         background: rgb(0, 0, 0);
         position: absolute;
         top: 0;
-        left: -100%;
+        left: 100%;
         z-index: -3;
         transition: 0.5s;
         border-radius: 1rem;
